# minuet-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: publish.yml  test.yml
src/minuet_mcp/: __init__.py  client.py  server.py
tests/: test_client.py  test_smoke.py  test_stdio_protocol.py
