[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minuet-mcp"
version = "0.1.1"
description = "MCP server for Minuet — the relationship layer for ERC-8004 AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Minuet Labs" }]
keywords = ["mcp", "model-context-protocol", "erc-8004", "ai-agents", "minuet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.urls]
Homepage = "https://minuet.ai"
Repository = "https://github.com/minuetai/minuet-mcp"
Issues = "https://github.com/minuetai/minuet-mcp/issues"

[project.scripts]
minuet-mcp = "minuet_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/minuet_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
